# dds

./: .pre-commit-config.yaml  README.md  pyproject.toml
dds/: manage.py
dds/app/: admin.py  forms.py  models.py  urls.py  views.py
dds/app/migrations/: 0001_initial.py  0002_alter_operationtype_name.py  0003_alter_operationtype_name.py
dds/dds/: asgi.py  settings.py  urls.py  wsgi.py
dds/fixtures/: initial_dds_data.json
dds/templates/app/: record_confirm_delete.html  record_form.html  records_list.html
